Add storage support and get input/save output files
